[project]
name = "crawler-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "xiaoyu", email = "xiaoyu@kyland.com" }
]
dependencies = [
    "requests>=2.31.0",
    "lxml>=5.2.1",
    "playwright>=1.43.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"crawler-demo" = "crawler_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crawler_demo"]
